--- a/views/books.hbs
+++ b/views/books.hbs
@@ -75,7 +75,7 @@
               <div class="card-body d-flex flex-column h-100">
                 <h6 class="card-title text-primary">{{this.title}}</h6>
                 <div class="card-text flex-grow-1">
-                  <p class="mb-1"><small><strong>Авторы:</strong> {{this.authors}}</small></p>
+                  <p class="mb-1"><small><strong>Авторы:</strong> {{formatFIO this.authors}}</small></p>
                   <p class="mb-1"><small><strong>Жанры:</strong> {{this.genres}}</small></p>
                   <p class="mb-1"><small><strong>Страниц:</strong> {{this.page_count}}</small></p>
                   <p class="mb-0">
